# hypixelFlipper

./: .gitignore  .vale.ini  LICENSE  README.md  flake.nix  pyproject.toml
flipper/: __main__.py  callApi.py  cli.py  data.py  getData.py  printout.py
