[build-system]
requires=["setuptools>=42"]
build-backend="setuptools.build_meta"

[project]
name = "flipper"
description = "gets info from hypixel API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"rich",
	"typer",
  "requests",
]
dynamic = ["version"]

[project.scripts]
flipper = "flipper.cli:main"

[tool.setuptools]
packages = ["flipper"]

[tool.setuptools.dynamic]
version = {attr = "flipper.__VERSION__"}
